--- a/template/edit-profile.html
+++ b/template/edit-profile.html
@@ -394,7 +394,7 @@
 
                                         <div class="col-md-6">
                                             <div class="form-group">
-                                                <label>Your First Name</label>
+                                                <label><i class="fa fa-quote-left"></i> Your First Name</label>
                                                 <input class="form-control"
                                                 disabled placeholder=
                                                 "Enter first name" type="text"
@@ -402,7 +402,7 @@
                                             </div>
 
                                             <div class="form-group">
-                                                <label>Your Last Name</label>
+                                                <label><i class="fa fa-quote-right"></i> Your Last Name</label>
                                                 <input class="form-control"
                                                 disabled placeholder=
                                                 "Enter last name" type="text"
@@ -412,7 +412,7 @@
                                             <div class="form-group">
                                                 <label class=
                                                 "col-md-3 control-label no-padding padtop5">
-                                                Profile Picture</label>
+                                                <i class="fa fa-file-photo-o"></i> Profile Picture</label>
 
                                                 <div class=
                                                 "col-md-9 ls-group-input">
@@ -423,21 +423,21 @@
                                             </div>
 
                                             <div class="form-group">
-                                                <label>Email address</label>
+                                                <label><i class="fa fa-envelope-o"></i> Email address</label>
                                                 <input class="form-control"
                                                 placeholder="Enter email" type=
                                                 "email">
                                             </div>
 
                                             <div class="form-group">
-                                                <label>Username</label>
+                                                <label><i class="fa fa-user"></i> Username</label>
                                                 <input class="form-control"
                                                 disabled placeholder="Username"
                                                 type="username" value="johny">
                                             </div>
 
                                             <div class="form-group">
-                                                <label>Change Password</label>
+                                                <label><i class="fa fa-key"></i> Change Password</label>
                                                 <input class="form-control"
                                                 name="password" placeholder=
                                                 "Enter New Password" type=
@@ -445,7 +445,7 @@
                                             </div>
 
                                             <div class="form-group">
-                                                <label>Confirm New
+                                                <label><i class="fa fa-random"></i> Confirm New
                                                 Password</label> <input class=
                                                 "form-control" name="password"
                                                 placeholder=
@@ -454,7 +454,7 @@
                                             </div>
 
                                             <div class="form-group">
-                                                <label>Emergency Contact
+                                                <label><i class="fa fa-phone"></i> Emergency Contact
                                                 Number</label> <input class=
                                                 "form-control" name="emergency"
                                                 placeholder=
@@ -465,30 +465,30 @@
                                             <div class="form-group">
                                                 <div class=
                                                 "col-lg-4 no-padding">
-                                                    Gender
+                                                    <i class="fa fa-check-circle-o"></i> Gender
                                                 </div><label class=
                                                 "radio col-lg-4"><input checked
                                                 class="icheck-green" id=
                                                 "optionsRadios4" name=
                                                 "optionsRadios" type="radio"
-                                                value="option1"> Male</label>
+                                                value="option1"> <i class="fa fa-male"></i> Male</label>
                                                 <label class=
                                                 "radio col-lg-4"><input class=
                                                 "icheck-green" id=
                                                 "optionsRadios4" name=
                                                 "optionsRadios" type="radio"
-                                                value="option1"> Female</label>
+                                                value="option1"> <i class="fa fa-female"></i> Female</label>
                                             </div>
 
                                             <div class="form-group">
-                                                <label>Date Of Birth</label>
+                                                <label><i class="fa fa-calendar"></i> Date Of Birth</label>
                                                 <input class=
                                                 "form-control datePickerOnly"
                                                 type="text">
                                             </div>
 
                                             <div class="form-group margint10">
-                                                <label>Full Name Of
+                                                <label><i class="fa fa-check"></i> Full Name Of
                                                 Spouse</label> <input class=
                                                 "form-control" name=
                                                 "spouse name" placeholder=
@@ -499,16 +499,16 @@
 
                                         <div class="col-md-6">
                                             <div class="form-group">
-                                                <label>Your Address</label>
+                                                <label><i class="fa fa-home"></i> Your Address</label>
                                                 <input class="form-control"
                                                 placeholder=
                                                 "House no. & street name" type=
                                                 "text"><br>
-                                                <label>Locality</label>
+                                                <label><i class="fa fa-thumb-tack"></i> Locality</label>
                                                 <input class="form-control"
                                                 placeholder="locality / city"
                                                 type="text"><br>
-                                                <label>State</label>
+                                                <label><i class="fa fa-map-marker"></i> State</label>
                                                 <div class="form-group">
                                                 
                                                 <div class="control-group">
@@ -766,7 +766,7 @@
                                             </div>
 
                                            
-                                                <label>Postal Code</label>
+                                                <label><i class="fa fa-pencil"></i> Postal Code</label>
                                                 <input class="form-control"
                                                 placeholder="Postal Code" type=
                                                 "text">
@@ -774,7 +774,7 @@
                                             </div>
 
                                             <div class="form-group">
-                                                 <label>Country</label>
+                                                 <label><i class="fa fa-flag"></i> Country</label>
                                                 <div class="control-group">
                                 <select id="select-country" class="demo-default" placeholder="Select a country...">
                                     <option value="">Select a country...</option>
@@ -1031,14 +1031,14 @@
                                             </div>
 
                                             <div class="form-group">
-                                                <label>Phone Number
+                                                <label><i class="fa fa-fax"></i> Phone Number
                                                 (Home)</label> <input class=
                                                 "form-control" placeholder=
                                                 "Home phone number" type="tel">
                                             </div>
 
                                             <div class="form-group">
-                                                <label>Phone Number
+                                                <label><i class="fa fa-mobile-phone"></i> Phone Number
                                                 (Mobile)</label> <input class=
                                                 "form-control" placeholder=
                                                 "Mobile phone number" type=
@@ -1046,7 +1046,7 @@
                                             </div>
 
                                             <div class="form-group">
-                                                <label>Position/Job
+                                                <label><i class="fa fa-paper-plane"></i> Position/Job
                                                 Title</label> <select class=
                                                 "form-control" disabled>
                                                     <option>
@@ -1073,7 +1073,7 @@
                                             </div>
 
                                             <div class="form-group">
-                                                <label>Immediate
+                                                <label><i class="fa fa-sitemap"></i> Immediate
                                                 Supervisor</label>
                                                 <select class="form-control"
                                                 disabled>
@@ -1101,7 +1101,7 @@
                                             </div>
 
                                             <div class="form-group">
-                                                <label>Race</label>
+                                                <label><i class="fa fa-globe"></i> Race</label>
                                                 <select class="form-control">
                                                     <option>
                                                         American Indian/Alaska
@@ -1154,7 +1154,7 @@
                                         <div class="col-md-12">
                                             <!--disabilities section starts here-->
 
-                                            <h3>Disabilities</h3>
+                                            <h3><i class="fa fa-wheelchair"></i> Disabilities</h3>
 
                                             <p>You are considered to have a
                                             disability if you have a physical
@@ -1312,7 +1312,7 @@
                                         <div class="col-md-12 whitebox">
                                             <!--veteran status starts-->
 
-                                            <h3>Veteran Status</h3>
+                                            <h3><i class="fa fa-bookmark"></i> Veteran Status</h3>
 
                                             <div class=
                                             "veteran">
@@ -1390,7 +1390,7 @@
                                                 the last three years.</label>
                                             </div>
                                             <div class="col-md-12 padtop15"><div class="form-group">
-                                                <label>Date Of Discharge (if recently seperated veteran)</label>
+                                                <label><i class="fa fa-calendar"></i> Date Of Discharge (if recently seperated veteran)</label>
                                                 <input class=
                                                 "form-control datePickerOnly"
                                                 type="text">
@@ -1405,7 +1405,7 @@
                                             <div class="form-group">
                                                 <button class=
                                                 "btn ls-light-blue-btn" type=
-                                                "submit">Update
+                                                "submit"><i class="fa fa-cloud-upload"></i> Update
                                                 Profile</button>
                                             </div>
                                         </div>
