--- a/template/edit-profile.html
+++ b/template/edit-profile.html
@@ -1312,7 +1312,7 @@
                                         <div class="col-md-12 whitebox">
                                             <!--veteran status starts-->
 
-                                            <h3><i class="fa fa-bookmark"></i> Veteran Status</h3>
+                                            <h3><i class="fa fa-star-o"></i> Veteran Status</h3>
 
                                             <div class=
                                             "veteran">
@@ -1389,7 +1389,7 @@
                                                 naval, or air service within
                                                 the last three years.</label>
                                             </div>
-                                            <div class="col-md-12 padtop15"><div class="form-group">
+                                            <div class="padtop15"><div class="form-group">
                                                 <label><i class="fa fa-calendar"></i> Date Of Discharge (if recently seperated veteran)</label>
                                                 <input class=
                                                 "form-control datePickerOnly"
