--- a/template/user-profile.html
+++ b/template/user-profile.html
@@ -375,10 +375,11 @@
                         <img src="assets/images/demo/avatar.png">
                         <button class="btn btn-sm ls-red-btn js_update">Update/Edit Profile</button>
                     </div>
-                    <div class="col-md-4 user-details">
+                    <div class="col-md-4 details_left">
                         <h2>John Doe</h2>
                         <p>Position/Job Title : President</p>
                         <p>User Role : Administrator</p>
+                        <p>Employee Id : AMA-454-324</p>
                         <h3>Address</h3>
                         <address>
                             <i class="fa fa-map-marker"></i>
