--- a/template/edit-profile.html
+++ b/template/edit-profile.html
@@ -1650,8 +1650,12 @@
             </div><!--Tab content -->
         </section><!--Right hidden  section end -->
     </section><!--Layout Script start -->
-    <script src="assets/js/color.js" type="text/javascript"></script> <script src="assets/js/lib/jquery-1.11.min.js" type=
-"text/javascript"></script> <script src="assets/js/bootstrap.min.js" type="text/javascript"></script> <script src="assets/js/multipleAccordion.js" type="text/javascript"></script>
+
+
+    <script src="assets/js/color.js" type="text/javascript"></script> 
+    <script src="assets/js/lib/jquery-1.11.min.js" type="text/javascript"></script> 
+    <script src="assets/js/bootstrap.min.js" type="text/javascript"></script> 
+    <script src="assets/js/multipleAccordion.js" type="text/javascript"></script>
 
     <script src="assets/js/lib/jqueryui.js"></script>
     <!--easing Library Script Start -->
