created new views/templates
created client section and added necessary fields.

--- a/template/add-user.html
+++ b/template/add-user.html
@@ -183,6 +183,16 @@
           <li> <a href="#">Edit/Delete Users</a> </li>
         </ul>
       </li>
+
+      <li> <a href="#"><i class="fa fa-group"></i> <span>Clients</span> <span class="badge badge-red">18</span></a>
+        <ul>
+          <li> <a href="#">All Clients</a> </li>
+          <li> <a href="#">Add Clients</a> </li>
+          <li> <a href="#">Edit/Delete Clients</a> </li>
+        </ul>
+      </li>
+
+
       <li> <a href="#"><i class="fa fa-building"></i> <span>Work Sites <span class="badge badge-red">15</span></span></a>
         <ul>
           <li> <a href="#">View Work Sites</a> </li>
@@ -251,12 +261,14 @@
               <div class="panel-body">
                 <p>You can add new users by entering the information in the fields below, the new users will have the ability to complete their profile by logging in and edit/update user profile section. New users will be sent the user details with the username and password that you will set below on their email address.</p>
                 <p>The automated email will have the instructions for changing the password after logging in for the first time and completing their profile using the appropriate section.</p>
+                <h5 class="emp_code">Generated Employee Id : AMA-454-324</h5>
                 <form class="ls_form">
                   <!--user profile form ends here--> 
                   <!--form section 1 starts here-->
                   
                   <div class="col-md-6 margint15">
                     <div class="form-group">
+
                       <label><i class="fa fa-quote-left"></i>First Name</label>
                       <input class="form-control" placeholder="Enter users first name" type="text">
                     </div>
