--- a/template/edit-profile.html
+++ b/template/edit-profile.html
@@ -255,6 +255,16 @@
                     </ul>
                 </li>
 
+                 <li> <a href="#"><i class="fa fa-group"></i> <span>Clients</span> <span class="badge badge-red">18</span></a>
+        <ul>
+          <li> <a href="#">All Clients</a> </li>
+          <li> <a href="#">Add Clients</a> </li>
+          <li> <a href="#">Edit/Delete Clients</a> </li>
+        </ul>
+      </li>
+
+      
+
                 <li>
                     <a href="#"><i class="fa fa-building"></i> <span>Work Sites
                     <span class="badge badge-red">15</span></span></a>
