--- a/template/admin-dashboard.html
+++ b/template/admin-dashboard.html
@@ -266,6 +266,16 @@
         <li><a href="#">Edit/Delete Users</a></li>
     </ul>
 </li>
+
+ <li> <a href="#"><i class="fa fa-group"></i> <span>Clients</span> <span class="badge badge-red">18</span></a>
+        <ul>
+          <li> <a href="#">All Clients</a> </li>
+          <li> <a href="#">Add Clients</a> </li>
+          <li> <a href="#">Edit/Delete Clients</a> </li>
+        </ul>
+      </li>
+
+      
 <li>
     <a href="#">
         <i class="fa fa-building"></i>
