--- a/template/edit-delete-users.html
+++ b/template/edit-delete-users.html
@@ -25,14 +25,16 @@
     "apple-touch-icon-precomposed" sizes="114x114">
 <!-- TODO: Add a favicon -->
 <link href="assets/images/ico/fab.ico" rel="shortcut icon">
-<title>Amaha - View Users</title>
+<title>Amaha - Edit Or Delete Users</title>
 <!--Page loading plugin Start -->
 <script src="assets/js/pace.min.js"></script><!--Page loading plugin End   -->
 <!-- Plugin Css Put Here -->
+
+
+
+
 <link href="assets/css/bootstrap.min.css" rel="stylesheet">
-<link rel="stylesheet" href="assets/css/plugins/jquery.remodal.css">
-<link rel="stylesheet" href="assets/css/plugins/dndTable.css">
-<link rel="stylesheet" href="assets/css/plugins/tsort.css">
+    <link rel="stylesheet" href="assets/css/plugins/selectize.bootstrap3.css">
 
 <!-- Plugin Css End -->
 <!-- Custom styles Style -->
@@ -215,13 +217,13 @@
           <div class="col-md-12"> 
             <!--Top header start-->
             
-            <h3 class="ls-top-header">View All Users</h3>
+            <h3 class="ls-top-header">Edit/Delete Users</h3>
             <!--Top header end --> 
             <!--Top breadcrumb start -->
             
             <ol class="breadcrumb">
               <li> <a class="fa fa-home" href="#"></a> </li>
-              <li class="active">View All Users</li>
+              <li class="active">Edit Or Delete Users</li>
             </ol>
             <!--Top breadcrumb start --> 
           </div>
@@ -232,55 +234,33 @@
           <div class="col-md-12">
             <div class="panel panel-default userform no-border">
               <div class="panel-heading">
-                <h3 class="panel-title">View All Users & Status</h3>
+                <h3 class="panel-title">Edit Or Delete User Profiles</h3>
               </div>
               <div class="panel-body"> 
-                <!--Table Wrapper Start-->
-                <div class="ls-editable-table table-responsive ls-table">
-                  <table class="table table-bordered table-striped table-bottomless" id="ls-editable-table">
-                    <thead>
-                      <tr>
-                        <th class="id_emp">Employee Id</th>
-                        <th>User Name</th>
-                        <th>Full Name</th>
-                        <th>Job Title</th>
-                        <th>Created On</th>
-                        <th class="text-center">View/Edit/Delete</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr>
-                        <td>AMA-12-12322</td>
-                        <td>SudhirYadav347</td>
-                        <td>Sudhir Yadav</td>
-                        <td>Foreman</td>
-                        <td>14/01/2014</td>
-                        <td class="text-center"><a href="#reModal">
-                          <button class="btn btn-xs btn-success"><i class="fa fa-eye"></i></button>
-                          </a> <a href="edit-profile.html">
-                          <button class="btn btn-xs btn-warning"><i class="fa fa-pencil-square-o"></i></button>
-                          </a> <a href="delete-users.html">
-                          <button class="btn btn-xs btn-danger"><i class="fa fa-minus"></i></button>
-                          </a></td>
-                      </tr>
-                      <tr>
-                        <td>AMA-12-12321</td>
-                        <td>SudhirYadav347</td>
-                        <td>Sudhir Yadav</td>
-                        <td>Foreman</td>
-                        <td>14/01/2014</td>
-                        <td class="text-center"><a href="#reModal">
-                          <button class="btn btn-xs btn-success"><i class="fa fa-eye"></i></button>
-                          </a> <a href="edit-profile.html">
-                          <button class="btn btn-xs btn-warning"><i class="fa fa-pencil-square-o"></i></button>
-                          </a> <a href="delete-users.html">
-                          <button class="btn btn-xs btn-danger"><i class="fa fa-minus"></i></button>
-                          </a></td>
-                      </tr>
-                    </tbody>
-                  </table>
+                <!--Select Box Start-->
+                   <div class="row">
+                    <div class="col-md-6">
+                        <h3 class="ls-header">Select & search from registered users</h3>
+                        <p>You can search and select from available users on this application and perform the actions of editing or deleting their profile</p>
+                            <div class="control-group">
+                                <select id="select-country" class="demo-default" placeholder="Select a user...">
+                                    <option value="">Select a user...</option>
+                                    <option value="AF">Username One</option>
+                                    <option value="AX">Username Two</option>
+                                    <option value="AL">Username Three</option>
+                                </select>
+                                <span class="help_text">Select One User</span>
+                            </div>
+                    </div>
+                    <div class="col-md-6 padtop100">
+                       <!--action buttons-->
+                       <div class="col-md-3"><a href="edit-profile.html"><button class="btn ls-light-blue-btn">Edit Selected User Profile</button></a></div>
+                       <div class="col-md-3"><button type="button" class="btn btn-danger confirmBox marginl25">Delete Selected User Profile</button></div>
+                       
+                       <!--action buttons end-->
+                    </div>
                 </div>
-                <!--Table Wrapper Finish--> 
+                <!--Seect Box Finish--> 
               </div>
             </div>
           </div>
@@ -421,47 +401,6 @@
   <!--Right hidden  section end --> 
 </section>
 
-<!--modal start-->
-<div class="remodal" data-remodal-id="reModal">
-  <h3>View User Profile</h3>
-  <div class="row">
-    <div class="col-md-12">
-      <h2>John Doe</h2>
-      <div class="col-md-6 details_left">
-        <p>Position/Job Title : President</p>
-        <p>User Role : Administrator</p>
-        <p>Employee Id : AMA-454-324</p>
-        <h2>Address</h2>
-        <address>
-        795 Folsom Ave, Suite 600<br>
-        San Francisco, CA 94107<br>
-        </address>
-        <p>Phone (Home): (123) 456-7890</p>
-        <p>Phone (mobile): (123) 456-7890</p>
-        <p>Account Created On : 10/10/2014</p>
-        <p>Emergency Contact Number : (123) 456-7890</p>
-        <p>Date Of Birth : 14/01/1986</p>
-        <p>Name Of Spouse : Katy Perry</p>
-        <p>Anniversary Date : 14/01/2014</p>
-        <div class="meta-details"> <span>last edited by : <a href="#">John Doe</a></span> <br/>
-          <span>last updated on:13/01/2013</span> </div>
-      </div>
-      <div class="col-md-6 details_left">
-        <h2>Date Of Joining: 10/10/2013</h2>
-        <p><a href="#">Supervisor : None</a></p>
-        <p>About : Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. </p>
-        <p>Email: <a href="#">admin@amahaelectricals.com</a></p>
-        <p>Disabilities : Diabetes</p>
-        <p>Race : American Indian</p>
-        <p>Gender : Male</p>
-        <p>Veteran Status : Active duty wartime or campaign badge veteran:</p>
-      </div>
-    </div>
-  </div>
-  <br>
-  <a class="remodal-cancel ls-red-btn btn" href="#">Close</a> <a class="remodal-confirm ls-light-green-btn btn" href="#">Edit User Profile</a> </div>
-<!--modal ends--> 
-
 <!--Layout Script start --> 
 <script type="text/javascript" src="assets/js/color.js"></script> 
 <script type="text/javascript" src="assets/js/lib/jquery-1.11.min.js"></script> 
@@ -490,26 +429,31 @@
 <script type="text/javascript" src="assets/js/pages/layout.js"></script> 
 <!--Layout Script End --> 
 
-<!--Drag & Drop & Sort  table start--> 
-<script src="assets/js/tsort.js"></script> 
-<script src="assets/js/jquery.tablednd.js"></script> 
-<script src="assets/js/jquery.dragtable.js"></script> 
-<!--Drag & Drop & Sort table end--> 
+  <!--selectize Library start-->
+    <script src="assets/js/selectize.min.js"></script>
+    <!--selectize Library End-->
 
-<!--Editable-table Start--> 
-<script src="assets/js/editable-table/jquery.dataTables.js"></script> 
-<script src="assets/js/editable-table/jquery.validate.js"></script> 
-<script src="assets/js/editable-table/jquery.jeditable.js"></script> 
-<script src="assets/js/editable-table/jquery.dataTables.editable.js"></script> 
-<!--Editable-table Finish --> 
+    <!--Select & Tag demo start-->
+    <script src="assets/js/pages/selectTag.js"></script>
+    <!--Select & Tag demo end-->
 
-<!--Demo table script start--> 
-<script src="assets/js/pages/table.js"></script> 
-<!--Demo table script end--> 
 
-<!-- Remodal Js Start--> 
-<script src="assets/js/jquery.remodal.js"></script> 
-<!-- Remodal Js Finished-->
+    <!--notify library script-->
+    <script src="assets/js/notify.min.js"></script>
+
+    <!--botbox library script-->
+    <script src="assets/js/bootbox.min.js"></script>
+
+    <!--human library script-->
+    <script src="assets/js/humane.min.js"></script>
+
+
+<!--AmaranJS library script Start -->
+    <script src="assets/js/jquery.amaran.js"></script>
+    <!--AmaranJS library script End   -->
+
+    <!--Demo notification pages-->
+    <script src="assets/js/pages/notification.js"></script>
 
 </body>
 </html>
