--- a/template/view-clients.html
+++ b/template/view-clients.html
@@ -25,7 +25,7 @@
     "apple-touch-icon-precomposed" sizes="114x114">
 <!-- TODO: Add a favicon -->
 <link href="assets/images/ico/fab.ico" rel="shortcut icon">
-<title>Amaha - View Users</title>
+<title>Amaha - View All Clients</title>
 <!--Page loading plugin Start -->
 <script src="assets/js/pace.min.js"></script><!--Page loading plugin End   -->
 <!-- Plugin Css Put Here -->
@@ -159,16 +159,13 @@
           <li> <a href="#">Edit/Delete Users</a> </li>
         </ul>
       </li>
-
-       <li> <a href="#"><i class="fa fa-group"></i> <span>Clients</span> <span class="badge badge-red">18</span></a>
+      <li> <a href="#"><i class="fa fa-group"></i> <span>Clients</span> <span class="badge badge-red">18</span></a>
         <ul>
           <li> <a href="#">All Clients</a> </li>
           <li> <a href="#">Add Clients</a> </li>
           <li> <a href="#">Edit/Delete Clients</a> </li>
         </ul>
       </li>
-
-      
       <li> <a href="#"><i class="fa fa-building"></i> <span>Work Sites <span class="badge badge-red">15</span></span></a>
         <ul>
           <li> <a href="#">View Work Sites</a> </li>
@@ -215,13 +212,13 @@
           <div class="col-md-12"> 
             <!--Top header start-->
             
-            <h3 class="ls-top-header">View All Users</h3>
+            <h3 class="ls-top-header">View All Clients</h3>
             <!--Top header end --> 
             <!--Top breadcrumb start -->
             
             <ol class="breadcrumb">
               <li> <a class="fa fa-home" href="#"></a> </li>
-              <li class="active">View All Users</li>
+              <li class="active">View All Clients</li>
             </ol>
             <!--Top breadcrumb start --> 
           </div>
@@ -232,7 +229,7 @@
           <div class="col-md-12">
             <div class="panel panel-default userform no-border">
               <div class="panel-heading">
-                <h3 class="panel-title">View All Users & Status</h3>
+                <h3 class="panel-title">View All Clients & Status</h3>
               </div>
               <div class="panel-body"> 
                 <!--Table Wrapper Start-->
@@ -240,10 +237,10 @@
                   <table class="table table-bordered table-striped table-bottomless" id="ls-editable-table">
                     <thead>
                       <tr>
-                        <th class="id_emp">Employee Id</th>
-                        <th>User Name</th>
-                        <th>Full Name</th>
-                        <th>Job Title</th>
+                        <th class="id_emp">Client Id</th>
+                        <th>Company Name</th>
+                        <th>Client Name</th>
+                        <th>Location</th>
                         <th>Created On</th>
                         <th class="text-center">View/Edit/Delete</th>
                       </tr>
@@ -423,43 +420,42 @@
 
 <!--modal start-->
 <div class="remodal" data-remodal-id="reModal">
-  <h3>View User Profile</h3>
+  <h3>View Client Profile</h3>
   <div class="row">
     <div class="col-md-12">
-      <h2>John Doe</h2>
+      <h2>Quantum Web Solutions</h2>
       <div class="col-md-6 details_left">
-        <p>Position/Job Title : President</p>
-        <p>User Role : Administrator</p>
-        <p>Employee Id : AMA-454-324</p>
+        
+        <p>User Role : Client</p>
+        <p>Client Id : AMA-454-324</p>
         <h2>Address</h2>
         <address>
         795 Folsom Ave, Suite 600<br>
         San Francisco, CA 94107<br>
         </address>
-        <p>Phone (Home): (123) 456-7890</p>
-        <p>Phone (mobile): (123) 456-7890</p>
-        <p>Account Created On : 10/10/2014</p>
-        <p>Emergency Contact Number : (123) 456-7890</p>
-        <p>Date Of Birth : 14/01/1986</p>
-        <p>Name Of Spouse : Katy Perry</p>
-        <p>Anniversary Date : 14/01/2014</p>
-        <div class="meta-details"> <span>last edited by : <a href="#">John Doe</a></span> <br/>
-          <span>last updated on:13/01/2013</span> </div>
+        <p>Phone (Office): (123) 456-7890</p>
+
+        
+      
+      
+     
+     
+        
       </div>
       <div class="col-md-6 details_left">
-        <h2>Date Of Joining: 10/10/2013</h2>
-        <p><a href="#">Supervisor : None</a></p>
-        <p>About : Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. </p>
+        <p>Account Created On: 10/10/2013</p>
+                <p>Phone (mobile 1): (123) 456-7890</p>
+        <p>Phone (mobile 2): (123) 456-7890</p>
+        <p>Location : California</p>
+        
         <p>Email: <a href="#">admin@amahaelectricals.com</a></p>
-        <p>Disabilities : Diabetes</p>
-        <p>Race : American Indian</p>
-        <p>Gender : Male</p>
-        <p>Veteran Status : Active duty wartime or campaign badge veteran:</p>
+        <p>Last Edited By : John Doe (Admin)</p>
+        
       </div>
     </div>
   </div>
   <br>
-  <a class="remodal-cancel ls-red-btn btn" href="#">Close</a> <a class="remodal-confirm ls-light-green-btn btn" href="#">Edit User Profile</a> </div>
+  <a class="remodal-cancel ls-red-btn btn" href="#">Close</a> <a class="remodal-confirm ls-light-green-btn btn" href="#">Edit Client Profile</a> </div>
 <!--modal ends--> 
 
 <!--Layout Script start --> 
