New worksite templates
updated worksite templates view/edit/add & delete

--- a/template/add-client.html
+++ b/template/add-client.html
@@ -258,19 +258,16 @@
               <div class="panel-heading ">
                 <h3 class="panel-title">Add New Client</h3>
               </div>
-              <div class="panel-body">
+              <div class="panel-body client">
+                <p><i class="fa fa-users"></i> You can add new client in this section in order to create a work site. Please note that you will not get the select option in worksite if you have not added the client first. Please refer to documentation for reference</p>
+
+                <h5 class="emp_code">Generated Client Id : AMA-454-324</h5>
               <form class="ls_form">
                 <!--user profile form ends here--> 
                 <!--form section 1 starts here-->
                 
                 <div class="col-md-6">
-                  <div class="form-group">
-                    <label><i class="fa fa-barcode"></i>Client Id (Auto Generated)</label>
-                    <input class="form-control"
-                                                placeholder=
-                                                "Enter first name" type="text"
-                                                disabled value="AMA-232eds-2323">
-                  </div>
+               
                   <div class="form-group">
                     <label><i class="fa fa-quote-left"></i>First Name</label>
                     <input class="form-control"
@@ -316,18 +313,21 @@
                                                 "Mobile phone number" type=
                                                 "tel">
                   </div>
-                  
-                </div>
-                <!--form section ends here--> 
-                <!--form section 2 starts here-->
-                
-                <div class="col-md-6">
+
                   <div class="form-group">
                     <label><i class="fa fa-envelope-o"></i> Email address</label>
                     <input class="form-control"
                                                 placeholder="Enter email" type=
                                                 "email">
                   </div>
+
+                  
+                </div>
+                <!--form section ends here--> 
+                <!--form section 2 starts here-->
+                
+                <div class="col-md-6">
+                  
 
                    <label><i class="fa fa-fax"></i>Fax</label>
                     <input class="form-control"
