--- a/template/assets/css/style.css
+++ b/template/assets/css/style.css
@@ -138,6 +138,10 @@ text{
     font-weight: normal;
 }
 
+a:hover, a:focus{
+    text-decoration: none;
+}
+
 /*-----------------------------------------------------------------*/
 
 
@@ -8482,5 +8486,23 @@ padding: 11px;
 color: #7D7D7D;
 font-size: 14px;
 }
+
+
+.client p i{
+    float: left;
+font-size: 30px;
+margin-right: 15px;
+line-height: 50px;
+}
+
+.control-group {
+margin-bottom: 15px;
+}
+
+.inline label.radio {
+float: left;
+margin-right: 30px;
+}
+
 
 /*-----------------------------------------------------------------*/
