--- a/template/add-workreport.html
+++ b/template/add-workreport.html
@@ -24,7 +24,7 @@
     "apple-touch-icon-precomposed" sizes="114x114"><!-- TODO: Add a favicon -->
     <link href="assets/images/ico/fab.ico" rel="shortcut icon">
 
-    <title>Amaha - Edit Profile</title><!--Page loading plugin Start -->
+    <title>Amaha - Add New Workreport</title><!--Page loading plugin Start -->
     <link href="assets/css/plugins/pace.css" rel="stylesheet">
     <script src="assets/js/pace.min.js"></script><!--Page loading plugin End   -->
     <!-- Plugin Css Put Here -->
@@ -385,7 +385,7 @@
                         <div class="col-md-12">
                             <!--Top header start-->
 
-                            <h3 class="ls-top-header">Edit Profile</h3>
+                            <h3 class="ls-top-header">Add New Work Report</h3>
                             <!--Top header end -->
                             <!--Top breadcrumb start -->
 
@@ -394,7 +394,7 @@
                                     <a class="fa fa-home" href="#"></a>
                                 </li>
 
-                                <li class="active">Edit Profile</li>
+                                <li class="active">Add New Work Report</li>
                             </ol><!--Top breadcrumb start -->
                         </div>
                     </div><!-- Main Content Element  Start-->
@@ -403,9 +403,9 @@
                         <div class="col-md-12">
                             <div class="panel panel-default userform no-border">
                                 <div class="panel-heading ">
-                                    <h3 class="panel-title">Update or Edit Your
-                                    Profile</h3>
+                                    <h3 class="panel-title">Add New Work Report In This Section</h3>
                                 </div>
+                                <p class="margint15">You can create a new work report in this section by filling up the fields below. The fields with * are required & can not be left empty. For more information please refer to the documentation.</p><p>If you are a journeyman the work reports will need the approval from project manager and will remain in pending status, if you are the admin then you can check the reports and change the status of report to available states.</p>
 
                                 <div class="panel-body">
                                     <form class="ls_form">
