--- a/template/edit-delete-worksite.html
+++ b/template/edit-delete-worksite.html
@@ -200,6 +200,16 @@
           <li> <a href="#">Edit/Delete Sites</a> </li>
         </ul>
       </li>
+
+       <li> <a href="#"><i class="fa fa-file-o"></i> <span>Work Reports <span class="badge badge-red">114</span></span></a>
+        <ul>
+          <li> <a href="#">View Work Reports</a> </li>
+          <li> <a href="#">Add New Work Report</a> </li>
+          <li> <a href="#">Edit/Delete Work Report</a> </li>
+        </ul>
+      </li>
+
+      
       <li> <a href="#"><i class="fa fa-file"></i> <span>Posts</span></a>
         <ul>
           <li> <a href="#">Add New Post</a> </li>
