added create timesheet section
added create timesheet section in the add workreport template.

--- a/template/view-worksites.html
+++ b/template/view-worksites.html
@@ -245,7 +245,7 @@
                     <thead>
                       <tr>
                         <th class="id_emp">Site Id</th>
-                        <th>Job Name</th>
+                        <th>Site Name</th>
                         <th>Client Name</th>
                         <th>Post Code</th>
                         <th>Created On</th>
