--- a/template/add-worksite.html
+++ b/template/add-worksite.html
@@ -545,8 +545,8 @@
                                                 </div>
 
                     <div class="form-group">
-                      <label><i class="fa fa-bullhorn"></i> Job Name</label>
-                      <input class="form-control" placeholder="Provide A Job Name" type="text">
+                      <label><i class="fa fa-bullhorn"></i> Site Name</label>
+                      <input class="form-control" placeholder="Provide A Site Name" type="text">
                     </div>
 
 
