--- a/template/assets/css/style.css
+++ b/template/assets/css/style.css
@@ -8389,6 +8389,10 @@ form.ls_form label.radio{
     margin-bottom: 15px;
 }
 
+.marginb50{
+    margin-bottom: 50px;
+}
+
 .padtop5{
     padding-top: 5px;
 }
@@ -8503,6 +8507,71 @@ margin-bottom: 15px;
 float: left;
 margin-right: 30px;
 }
+
+.panel.panel-default.userform.no-border p {
+padding: 15px;
+}
+
+.grey{
+    background: #EAEAEA;
+}
+
+.address td {
+width: 50%;
+}
+
+.address {
+padding: 25px;
+border: 1px solid #FFF;
+margin-top: 27px;
+background: rgb(255, 129, 129);
+color: #fff;
+font-size: 13px;
+}
+
+.address table tr {
+height: 29px;
+}
+
+.col-md-1.equals {
+font-size: 52px;
+text-align: Center;
+line-height: 85px;
+color: #FD7C7C;
+}
+
+.clonedInput fieldset {
+margin-bottom: 15px;
+}
+
+input.form-control.auto {
+background: #FC6565;
+color: #fff;
+border: 1px solid #fff;
+
+}
+
+.clonedInput {
+background: #F5F5F5;
+padding: 15px;
+border: 1px dashed #C3C3C3;
+margin-bottom: 15px;
+}
+
+.total_all h3 {
+background: rgb(74, 194, 157);
+text-align: Center;
+margin: 0px;
+padding: 10px;
+width: 180px;
+color: #fff;
+float: right;
+font-size: 13px;
+margin-right: -30px;
+text-transform: uppercase;
+}
+
+
 
 
 /*-----------------------------------------------------------------*/
