view work report template
added view work reports template.

--- a/template/add-workreport.html
+++ b/template/add-workreport.html
@@ -458,11 +458,15 @@
                                                 <table>
                                                     <tbody>
                                                         <tr>
-                                                            <td>Company Name</td>
+                                                            <td>Client Name</td>
                                                             <td>Quantum Web Solutions</td>
                                                         </tr>
                                                         <tr>
-                                                            <td>Address:</td>
+                                                            <td>Worksite Name</td>
+                                                            <td>Reeds Avenue</td>
+                                                        </tr>    
+                                                        <tr>
+                                                            <td>Site Address:</td>
                                                             <td>E 295,LGF</td>
                                                         </tr>
                                                         <tr>
@@ -481,14 +485,7 @@
                                                             <td>Country:</td>
                                                             <td>India</td>
                                                         </tr>
-                                                        <tr>
-                                                            <td>Email:</td>
-                                                            <td>support@quantumwebsol.com</td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td>Phone:</td>
-                                                            <td>011-41-84463</td>
-                                                        </tr>
+                                                        
                                                     </tbody>
                                                 </table>
                                             </div>   
@@ -497,7 +494,7 @@
                                 </div><!--panel ends here-->
                             </div>
 
-                            <div class="panel panel-default userform no-border"><!--time logging section starts here -->
+                            <div class="panel panel-default userform no-border"><!--time logging panel starts here -->
                                 <div class="panel-heading ">
                                     <h3 class="panel-title">Create TimeSheet</h3>
                                 </div>
@@ -604,9 +601,18 @@
                                 </div><!--panel ends here-->
                             </div><!--time logging ends here-->
 
+                            <!--additional comments-->
+                            <div class="col-md-12 message">
+                                <p>additional comments</p>
+                                <textarea class="form-control autogrow" placeholder="Type your comments & additional notes here....."></textarea>
+                            </div>
+                            <!--additiona comments end-->
+
+                             
+                           
                             <div class="row marginb50">
                             <div class="col-md-6 total_all">
-                                                <h3>Total : $<span>1200</span></h3>
+                                                <h3>Grand Total : $<span>1200</span></h3>
                                             </div>
 
                              <div class="col-md-6 total_all">
