--- a/template/assets/css/style.css
+++ b/template/assets/css/style.css
@@ -8523,7 +8523,7 @@ width: 50%;
 .address {
 padding: 25px;
 border: 1px solid #FFF;
-margin-top: 27px;
+margin-top: 40px;
 background: rgb(255, 129, 129);
 color: #fff;
 font-size: 13px;
@@ -8563,7 +8563,7 @@ background: rgb(74, 194, 157);
 text-align: Center;
 margin: 0px;
 padding: 10px;
-width: 180px;
+width: 200px;
 color: #fff;
 float: right;
 font-size: 13px;
@@ -8571,7 +8571,57 @@ margin-right: -30px;
 text-transform: uppercase;
 }
 
+.col-md-12.message {
+background: rgb(250, 250, 250);
+padding: 15px;
+margin-bottom: 30px;
+border: 1px solid #F2F2F2;
+}
 
+.message p {
+background: rgb(207, 207, 207);
+width: 168px;
+text-align: center;
+padding: 3px;
+margin-bottom: -1px;
+color: #FFF;
+border: 1px solid #C0C0C0;
+}
+
+
+.wreport_1 h3{
+margin-top: 0px;
+margin-bottom: 18px;
+font-size: 18px;
+}
+
+.wreport_1 h2{
+    margin-top: 14px;
+}
+
+.remodal.wreport_1 {
+max-width: 900px;
+}
+
+.remodal.wreport_1 th {
+background: rgb(223, 223, 223);
+font-size: 14px;
+font-weight: normal;
+text-align: Center;
+text-transform: uppercase;
+}
+
+.remodal.wreport_1 td {
+font-size: 14px;
+}
+
+a.remodal-approve {
+border: 2px solid #0343CB;
+padding: 6px;
+line-height: 24px;
+margin-top: -4px;
+margin-left: 3px;
+}
 
 
 /*-----------------------------------------------------------------*/
