--- a/template/work reports/view workreports.html
+++ b/template/work reports/view workreports.html
@@ -438,7 +438,7 @@
     <div class="col-md-12">
       <h2>Client : Quantum Web Solutions</h2>
       <h3>Worksite : Name of the worksite</h2>
-      <div class="col-md-6 details_left">
+      <div class="col-md-6 details_right">
         <p>Job No.: AMA-454-324</p>
         <p>Submitted By: Sudhir Yadav</p>
         <p>Status : PENDING</p>
