--- a/template/assets/css/style.css
+++ b/template/assets/css/style.css
@@ -8623,5 +8623,10 @@ margin-top: -4px;
 margin-left: 3px;
 }
 
-
+.details_right p {
+text-align: right;
+font-size: 13px;
+line-height: 14px;
+margin-top: 10px;
+}
 /*-----------------------------------------------------------------*/
