--- a/template/worksites/edit-delete-worksite.html
+++ b/template/worksites/edit-delete-worksite.html
@@ -22,7 +22,7 @@
 <link href="assets/images/ios/fickle-logo-114.png" rel="apple-touch-icon-precomposed" sizes="114x114">
 <!-- TODO: Add a favicon -->
 <link href="assets/images/ico/fab.ico" rel="shortcut icon">
-<title>Amaha - Add WorkSite</title>
+<title>Amaha - Edit/Delete WorkSite</title>
 <!--Page loading plugin Start -->
 <link href="assets/css/plugins/pace.css" rel="stylesheet">
 <script src="assets/js/pace.min.js"></script><!--Page loading plugin End   -->
@@ -1211,6 +1211,7 @@
                     </div>
                     <div class="form-group">
                       <button class="btn ls-light-blue-btn" type="submit"> <i class="fa fa-cloud-upload"></i> Update The Worksite & Add It To Database </button>
+                      <button class="btn btn-danger" type="submit"> <i class="fa fa-eraser"></i> Delete The Worksite </button>
                     </div>
                   </div>
                 </form>
