--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -138,6 +138,10 @@ text{
     font-weight: normal;
 }
 
+a:hover, a:focus{
+    text-decoration: none;
+}
+
 /*-----------------------------------------------------------------*/
 
 
@@ -8369,6 +8373,10 @@ form.ls_form label.radio{
     margin-top: 0px;
 }
 
+.margint5{
+    margin-top: 5px;
+}
+
 .margint10{
     margin-top: 20px;
 }
@@ -8381,6 +8389,10 @@ form.ls_form label.radio{
     margin-bottom: 15px;
 }
 
+.marginb50{
+    margin-bottom: 50px;
+}
+
 .padtop5{
     padding-top: 5px;
 }
@@ -8389,8 +8401,24 @@ form.ls_form label.radio{
     padding-top: 15px;
 }
 
+.padtop25{
+    padding-top: 25px;
+}
+
+.padtop50{
+    padding-top: 50px;
+}
+
+.padtop100{
+    padding-top: 100px;
+}
+
 .marginl15{
     margin-left: 15px;
+}
+
+.marginl25{
+    margin-left: 25px;
 }
 
 .marginb10{
@@ -8453,4 +8481,152 @@ border-radius: 5px;
 margin-top: 15px;
 }
 
+h5.emp_code {
+text-align: Center;
+margin-top: 25px;
+margin-bottom: 25px;
+background: rgb(236, 236, 236);
+padding: 11px;
+color: #7D7D7D;
+font-size: 14px;
+}
+
+
+.client p i{
+    float: left;
+font-size: 30px;
+margin-right: 15px;
+line-height: 50px;
+}
+
+.control-group {
+margin-bottom: 15px;
+}
+
+.inline label.radio {
+float: left;
+margin-right: 30px;
+}
+
+.panel.panel-default.userform.no-border p {
+padding: 15px;
+}
+
+.grey{
+    background: #EAEAEA;
+}
+
+.address td {
+width: 50%;
+}
+
+.address {
+padding: 25px;
+border: 1px solid #FFF;
+margin-top: 40px;
+background: rgb(255, 129, 129);
+color: #fff;
+font-size: 13px;
+}
+
+.address table tr {
+height: 29px;
+}
+
+.col-md-1.equals {
+font-size: 52px;
+text-align: Center;
+line-height: 85px;
+color: #FD7C7C;
+}
+
+.clonedInput fieldset {
+margin-bottom: 15px;
+}
+
+input.form-control.auto {
+background: #FC6565;
+color: #fff;
+border: 1px solid #fff;
+
+}
+
+.clonedInput {
+background: #F5F5F5;
+padding: 15px;
+border: 1px dashed #C3C3C3;
+margin-bottom: 15px;
+}
+
+.total_all h3 {
+background: rgb(74, 194, 157);
+text-align: Center;
+margin: 0px;
+padding: 10px;
+width: 200px;
+color: #fff;
+float: right;
+font-size: 13px;
+margin-right: -30px;
+text-transform: uppercase;
+}
+
+.col-md-12.message {
+background: rgb(250, 250, 250);
+padding: 15px;
+margin-bottom: 30px;
+border: 1px solid #F2F2F2;
+}
+
+.message p {
+background: rgb(207, 207, 207);
+width: 168px;
+text-align: center;
+padding: 3px;
+margin-bottom: -1px;
+color: #FFF;
+border: 1px solid #C0C0C0;
+}
+
+
+.wreport_1 h3{
+margin-top: 0px;
+margin-bottom: 18px;
+font-size: 18px;
+}
+
+.wreport_1 h2{
+    margin-top: 14px;
+}
+
+.remodal.wreport_1 {
+max-width: 900px;
+}
+
+.remodal.wreport_1 th {
+background: rgb(223, 223, 223);
+font-size: 14px;
+font-weight: normal;
+text-align: Center;
+text-transform: uppercase;
+}
+
+.remodal.wreport_1 td {
+font-size: 14px;
+}
+
+a.remodal-approve {
+border: 2px solid #0343CB;
+padding: 6px;
+line-height: 24px;
+margin-top: -4px;
+margin-left: 3px;
+}
+
+.details_right p {
+text-align: right;
+font-size: 13px;
+line-height: 14px;
+margin-top: 10px;
+}
 /*-----------------------------------------------------------------*/
