all bugs solved

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -8630,3 +8630,6 @@ line-height: 14px;
 margin-top: 10px;
 }
 /*-----------------------------------------------------------------*/
+
+
+.error{ color:red;}
